feat: Add support for $expand and $count in OData queries, implement metadata retrieval, and enhance integration tests